cloudformation/create-minecraft-vpc.json
{
    "Description": "Create all the AWS infrastructure needed to run a Minecraft VPC",
    "Parameters": {
        "AccessIP": {
            "Type": "String",
            "Default": "0.0.0.0/0",
            "Description": "Fill this in with your IP address appending /32, this ensures ONLY you can access the the server - 12.34.45.67/32. By default, anybody can access server - 0.0.0.0/0. Find your IP here: https://www.whatismyip.com/"
        }
    },
    "Resources": {
        "minecraftVPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/28",
                "EnableDnsHostnames": true,
                "EnableDnsSupport": true,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "minecraft-vpc"
                    }
                ]
            }
        },
        "minecraftIG": {
            "Type": "AWS::EC2::InternetGateway",
            "DependsOn": "minecraftVPC",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "minecraft-ig"
                    }
                ]
            }
        },
        "AttachGateway": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "DependsOn": [
                "minecraftVPC",
                "minecraftIG"
            ],
            "Properties": {
                "VpcId": {
                    "Ref": "minecraftVPC"
                },
                "InternetGatewayId": {
                    "Ref": "minecraftIG"
                }
            }
        },
        "minecraftRT": {
            "Type": "AWS::EC2::RouteTable",
            "DependsOn": [
                "minecraftVPC",
                "AttachGateway"
            ],
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "minecraft-rt"
                    }
                ],
                "VpcId": {
                    "Ref": "minecraftVPC"
                }
            }
        },
        "addRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": [
                "minecraftRT",
                "minecraftIG"
            ],
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": {
                    "Ref": "minecraftRT"
                },
                "GatewayId": {
                    "Ref": "minecraftIG"
                }
            }
        },
        "minecraftSubnet": {
            "Type": "AWS::EC2::Subnet",
            "DependsOn": "minecraftVPC",
            "Properties": {
                "VpcId": {
                    "Ref": "minecraftVPC"
                },
                "CidrBlock": "10.0.0.0/28",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "minecraft-subnet"
                    }
                ]
            }
        },
        "minecraftSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "DependsOn": "minecraftVPC",
            "Properties": {
                "GroupName": "minecraft",
                "GroupDescription": "Opens ports for minecraft, ssh, and ping",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 22,
                        "ToPort": 22,
                        "Description": "ssh",
                        "CidrIp": {
                            "Ref": "AccessIP"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 25565,
                        "ToPort": 25565,
                        "Description": "minecraft",
                        "CidrIp": {
                            "Ref": "AccessIP"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 19132,
                        "ToPort": 19133,
                        "Description": "minecraft",
                        "CidrIp": {
                            "Ref": "AccessIP"
                        }
                    },
                    {
                        "IpProtocol": "udp",
                        "FromPort": 25565,
                        "ToPort": 25565,
                        "Description": "minecraft",
                        "CidrIp": {
                            "Ref": "AccessIP"
                        }
                    },
                    {
                        "IpProtocol": "icmp",
                        "FromPort": 8,
                        "ToPort": -1,
                        "Description": "ping",
                        "CidrIp": {
                            "Ref": "AccessIP"
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "minecraftVPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "minecraft-sg"
                    }
                ]
            }
        }
    },
    "Outputs": {
        "VpcId": {
            "Value": {
                "Fn::GetAtt": [
                    "minecraftVPC",
                    "VpcId"
                ]
            }
        },
        "SubnetId": {
            "Value": {
                "Fn::GetAtt": [
                    "minecraftSubnet",
                    "SubnetId"
                ]
            }
        },
        "SecurityGroupId": {
            "Value": {
                "Fn::GetAtt": [
                    "minecraftSG",
                    "GroupId"
                ]
            }
        }
    }
}
